[package]
name = "sensehat-stick"
description = "A Rust library for the Raspberry Pi Sense HAT Joystick."
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Rosales <globojorro@gmail.com>"]
keywords = ["sensehat", "hardware", "joystick", "raspberry-pi", "evdev"]
categories = ["hardware-support", "asynchronous"]
homepage = "https://github.com/saibatizoku/sensehat-stick-rs"
repository = "https://github.com/saibatizoku/sensehat-stick-rs"
readme = "README.md"
license = "MIT"

[features]
default = ["linux-evdev"]
linux-evdev = ["evdev"]

[dependencies]
evdev = { version = "0.12", optional = true }
glob = "0.3"
num_enum = "0.7.3"
